k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neurallog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neurallog
  template:
    metadata:
      labels:
        app: neurallog
    spec:
      containers:
        - name: neurallog
          image: neurallog:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"
