k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neurallog-service
spec:
  selector:
    app: neurallog

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: NodePort
